Thu Oct 10 16:12:38 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Allow EXTRA_DIST items to be
	in subdirs.

	* remake.am (Makefile): Depend on BUILT_SOURCES.
	* remake-subd.am (Makefile): Depend on BUILT_SOURCES.
	* depend.am (.deps/.P): Don't depend on BUILT_SOURCES.

	* automake.in (handle_yacc_lex_cxx): Handle y.tab.h in non-ylwrap
	case.

	* ylwrap: Bug fix.  From Jim Meyering.

Wed Oct  9 22:51:16 1996  Tom Tromey  <tromey@cygnus.com>

	* m4/mktime.m4: Don't define AC_HEADER_SYS_TIME_H; instead just
	check directly for header.

Mon Oct  7 13:08:15 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_configure): fp_WITH_DMALLOC and fp_WITH_REGEX
	are obsolete.

Sun Oct  6 00:43:01 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (AC_CONFIG_AUX_DIR_PATTERN): New global.
	(AM_INIT_AUTOMAKE_PATTERN): New global.
	(scan_configure): Use them.

	* aclocal.in (add_file): Search contents of included files.  Test
	req.test.
	(scan_m4_files): Don't skip acinclude.m4 when constructing
	search.  Test acsilent.test.
	(scan_m4_files): Scan acinclude.m4.

	* aclocal.in (add_file): Removed debugging print.
	(scan_configure): Set $file_contents when scanning acinclude.m4.
	Test acinclude.test.

	* configure.in: Upped to 1.1g.

	* Released 1.1f.

	* texinfos.am: Run : after install-info.

	* aclocal.in (parse_arguments): Better error message.
	* automake.in (parse_arguments): Better error message.

	* remake.am (Makefile): Depend on $(srcdir)/Makefile.in, to work
	around broken makes.  From David A. Swierczek.
	* remake-subd.am (Makefile): Ditto.

Sat Oct  5 11:29:48 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Put BUILT_SOURCES onto @all if
	appropriate.
	(handle_source_transform): Error if discovered source file is
	mentioned.
	(do_one_merge_target): Move all-vs-check test here.

	* m4/obstack.m4: New file.
	* m4/error.m4: New file.

	* automake.in (scan_configure): Support AM_FUNC_MKTIME,