@@ -15,9 +15,13 @@ Further:
 - consider adding "echo"s to installs again.
   users can use make SHELL='sh -x' to get the full dirt
 
-Avoid loops when installing; instead unroll them in automake
+Some long-term projects:
+* if $(FOO) is used somewhere, ensure FOO is defined, either by
+  user or by automake if possible
+* Don't rearrange order of `include' lines relative to += assignments.
+* Handle += assignments at all.
 
-allow `EXTRA_DIST = foo/bar'; too many requests to ignore
+Avoid loops when installing; instead unroll them in automake
 
 Franc,ois> * ansi2knr was uselessly compiled, and it might be an
 Franc,ois> Automake problem:
@@ -142,7 +146,6 @@ Then user must use "make -k check".  This is probably more natural.
 Consider: "cvs" option adds some cvs-specific rules?
 
 "Cygnus"-specific features:
-* An option that statically rewrites @MAINT@ to "#M#".
 * Should look for certain tools in the build tree:
   expect, dejagnu, makeinfo
 * `no-installinfo' is the default
@@ -316,8 +319,6 @@ some support for this.  Here are some of the issues:
 
 These can both be handled via dist-hook:
 . Consider supporting guile-style PLUGIN directories automatically?
-. Consider allowing eg "foo/bar" to appear in EXTRA_DIST, and generating
-  code to make directory foo at dist time
 
 djm says:
 David> To avoid comments like the one about subdirs getting buried in
@@ -334,16 +335,8 @@ Karl> generally uses lowercase. Not that it matters :-).
 
 Stuff for aclocal:
 
-Should ignore ## comments.
-
 probably should put each group of m4 files into a subdir owned by the
 containing application.
-
-must fill in definitions for some of the AC_FEATURE macros
-
-consider including autosystem; that is the only way the AC_FEATURE
-macros even make sense.  Or move the AC_FEATURE macros back into
-autosystem...
 
 ================================================================
 
