@@ -6,7 +6,10 @@
 # serial 1
 
 AC_DEFUN(AM_PATH_LISPDIR,
- [AC_PATH_PROG(EMACS, emacs xemacs, no)
+ [# If set to t, that means we are running in a shell under Emacs.
+  # If you have an Emacs named "t", then use the full path.
+  test "$EMACS" = t && EMACS=
+  AC_PATH_PROG(EMACS, emacs xemacs, no)
   if test $EMACS != "no"; then
     AC_MSG_CHECKING([where .elc files should go])
     dnl Set default value
