@@ -1,7 +1,11 @@
 Thu Oct 10 16:12:38 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* m4/lispdir.m4: Unset EMACS if it is set to `t'.
+
 	* automake.in (handle_dist_worker): Allow EXTRA_DIST items to be
 	in subdirs.
+	(do_one_merge_target): Use all-am, not all, in subdirs case.
+	(handle_merge_targets): Always generate all-am in subdirs case.
 
 	* remake.am (Makefile): Depend on BUILT_SOURCES.
 	* remake-subd.am (Makefile): Depend on BUILT_SOURCES.
